<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/events_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMyThemeDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/events_heading"
            app:titleMarginStart="20dp"
            app:titleTextColor="@color/colorWhite"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_event_list_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/rg_event_list_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginVertical="20dp"
                    android:background="@drawable/bg_page_selector"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_event_list_selector_ongoing"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_page_selector_button_1"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/ongoing_events"
                        android:textColor="@drawable/tc_page_selector"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_event_list_selector_finished"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_page_selector_button_2"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/finished_events"
                        android:textColor="@drawable/tc_page_selector"
                        android:textSize="15sp" />
                </RadioGroup>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_event_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_event_list_new_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="30dp"
        android:src="@drawable/ic_add_wo_bg"
        android:background="@color/colorTransparent" />

</FrameLayout>
