<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.newevent.NewEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMyThemeDark"
        app:title="@string/create_new_event"
        app:titleTextColor="@color/colorWhite" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="@dimen/size_text_big_18sp"
                    android:textColor="@color/colorMyThemeDark"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

                <EditText

                    android:id="@+id/et_new_event_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/event_name"
                    android:inputType="text" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/choose_devices"
                android:textColor="@color/colorMyThemeDark"
                android:textSize="@dimen/size_text_huge_20sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"

                android:background="@color/colorGrey" />

            <LinearLayout
                android:id="@+id/ll_new_events_devices_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20dp">

<!--                <CheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="xxx"-->
<!--                    android:textSize="@dimen/size_text_big_18sp"-->
<!--                    android:textColor="@color/colorDarkGrey"-->
<!--                    android:paddingStart="10dp"-->
<!--                    android:paddingEnd="10dp"/>-->
<!--                <CheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="xxxccccccccc"-->
<!--                    android:textSize="@dimen/size_text_big_18sp"-->
<!--                    android:textColor="@color/colorDarkGrey"-->
<!--                    android:paddingStart="10dp"-->
<!--                    android:paddingEnd="10dp"/>-->

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_new_event_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create_new_event"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_text_big_18sp"
        android:background="@color/colorMyThemeDark"
        />
</LinearLayout>